removed few packages

--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
+  "homepage": "https://github.com/vipullimbachiya/react-meme-generator/",
   "name": "memegenerator",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "minimap-react": "^1.0.5",
     "react": "^15.6.1",
-    "react-bootstrap": "^0.31.0",
+    "react-bootstrap": "^0.31.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
-    "redux": "^3.7.1",
+    "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
@@ -17,6 +17,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
