--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/vipullimbachiya/react-meme-generator/",
+  "homepage": "https://vipullimbachiya.github.io/react-meme-generator/",
   "name": "memegenerator",
   "version": "0.1.0",
   "private": true,
